<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/nomeapp"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:textSize="30dp"/>

        </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:id="@+id/linearLayout3">


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:text="@string/versionapp"
        android:textSize="18dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignLeft="@+id/nomeapp"
        android:layout_alignStart="@+id/nomeapp"
        android:paddingTop="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manifest"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmaps"
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="10dp" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenv"
        android:textStyle="bold"
        android:paddingTop="25dp"
        android:textSize="17dp"/>


    </LinearLayout>

</LinearLayout>

